--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,8 @@ default: &default
 development:
   <<: *default
   database: m_doc_backend_development
-
+  username: postgres
+  password: murlimohan108
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
   # When left blank, PostgreSQL will use the default role. This is
@@ -58,6 +59,8 @@ development:
 test:
   <<: *default
   database: m_doc_backend_test
+  username: postgres
+  password: murlimohan108
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
